// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ListPageControls/BaseTimeRange No Start End Given 1`] = `
<BaseTimeRange
  onChange={[Function]}
>
  <div
    className="makeStyles-root"
  >
    <div
      className="MuiButtonGroup-root"
      role="group"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-calendarButton"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root makeStyles-calendarIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
        </span>
        <NoSsr>
          <span
            className="MuiTouchRipple-root"
          >
            <TransitionGroup
              childFactory={[Function]}
              component={null}
              exit={true}
            />
          </span>
        </NoSsr>
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-selectButton"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          All
        </span>
        <NoSsr>
          <span
            className="MuiTouchRipple-root"
          >
            <TransitionGroup
              childFactory={[Function]}
              component={null}
              exit={true}
            />
          </span>
        </NoSsr>
      </button>
    </div>
    <Portal>
      <div
        className="MuiPopover-root"
        onKeyDown={[Function]}
        role="presentation"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "fixed",
            "right": 0,
            "top": 0,
            "visibility": "hidden",
            "zIndex": 1300,
          }
        }
      >
        <TrapFocus>
          <div
            data-test="sentinelStart"
            tabIndex={0}
          />
          <Transition>
            <div
              className="MuiPaper-root MuiMenu-paper MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
              style={
                Object {
                  "opacity": 0,
                  "transform": "scale(0.75, 0.5625)",
                  "visibility": "hidden",
                }
              }
              tabIndex="-1"
            >
              <ul
                className="MuiList-root MuiMenu-list MuiList-padding"
                onKeyDown={[Function]}
                role="menu"
                tabIndex={-1}
              >
                <li
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                  data-ga="MenuItem(all)"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="menuitem"
                  tabIndex={0}
                >
                  All
                  <NoSsr>
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </NoSsr>
                </li>
                <li
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                  data-ga="MenuItem(now-1d/d)"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  In 1 Day
                  <NoSsr>
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </NoSsr>
                </li>
                <li
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                  data-ga="MenuItem(now-1w/d)"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  In 1 Week
                  <NoSsr>
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </NoSsr>
                </li>
                <li
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                  data-ga="MenuItem(now-1M/d)"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  In 1 Month
                  <NoSsr>
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </NoSsr>
                </li>
                <li
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                  data-ga="MenuItem(custom)"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  Custom
                  <NoSsr>
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </NoSsr>
                </li>
              </ul>
            </div>
          </Transition>
          <div
            data-test="sentinelEnd"
            tabIndex={0}
          />
        </TrapFocus>
      </div>
    </Portal>
  </div>
</BaseTimeRange>
`;

exports[`Storyshots ListPageControls/BaseTimeRange Set Start End From Props 1`] = `
<div>
  <p>
    <code>
      start
    </code>
    , 
    <code>
      end
    </code>
     being 
    <code>
      ''
    </code>
  </p>
  <BaseTimeRange
    end=""
    onChange={[Function]}
    start=""
  >
    <div
      className="makeStyles-root"
    >
      <div
        className="MuiButtonGroup-root"
        role="group"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-calendarButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root makeStyles-calendarIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
              />
            </svg>
          </span>
          <NoSsr>
            <span
              className="MuiTouchRipple-root"
            >
              <TransitionGroup
                childFactory={[Function]}
                component={null}
                exit={true}
              />
            </span>
          </NoSsr>
        </button>
        <input
          className="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-startDate"
          color="default"
          disableFocusRipple={false}
          disableRipple={false}
          disabled={false}
          fullWidth={false}
          key=".1"
          onChange={[Function]}
          size="medium"
          type="date"
          value=""
          variant="outlined"
        >
          <input
            className="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-startDate"
            onChange={[Function]}
            type="date"
            value=""
          />
        </input>
      </div>
      <span
        className="makeStyles-to"
      >
        to
      </span>
      <input
        className="makeStyles-endDate"
        onChange={[Function]}
        type="date"
        value=""
      />
      <Portal>
        <div
          className="MuiPopover-root"
          onKeyDown={[Function]}
          role="presentation"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "fixed",
              "right": 0,
              "top": 0,
              "visibility": "hidden",
              "zIndex": 1300,
            }
          }
        >
          <TrapFocus>
            <div
              data-test="sentinelStart"
              tabIndex={0}
            />
            <Transition>
              <div
                className="MuiPaper-root MuiMenu-paper MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style={
                  Object {
                    "opacity": 0,
                    "transform": "scale(0.75, 0.5625)",
                    "visibility": "hidden",
                  }
                }
                tabIndex="-1"
              >
                <ul
                  className="MuiList-root MuiMenu-list MuiList-padding"
                  onKeyDown={[Function]}
                  role="menu"
                  tabIndex={-1}
                >
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(all)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={0}
                  >
                    All
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1d/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Day
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1w/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Week
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1M/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Month
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(custom)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    Custom
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                </ul>
              </div>
            </Transition>
            <div
              data-test="sentinelEnd"
              tabIndex={0}
            />
          </TrapFocus>
        </div>
      </Portal>
    </div>
  </BaseTimeRange>
  <p>
    <code>
      start
    </code>
     equal to option values:
  </p>
  <BaseTimeRange
    onChange={[Function]}
    start="now-1d/d"
  >
    <div
      className="makeStyles-root"
    >
      <div
        className="MuiButtonGroup-root"
        role="group"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-calendarButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root makeStyles-calendarIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
              />
            </svg>
          </span>
          <NoSsr>
            <span
              className="MuiTouchRipple-root"
            >
              <TransitionGroup
                childFactory={[Function]}
                component={null}
                exit={true}
              />
            </span>
          </NoSsr>
        </button>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-selectButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            In 1 Day
          </span>
          <NoSsr>
            <span
              className="MuiTouchRipple-root"
            >
              <TransitionGroup
                childFactory={[Function]}
                component={null}
                exit={true}
              />
            </span>
          </NoSsr>
        </button>
      </div>
      <Portal>
        <div
          className="MuiPopover-root"
          onKeyDown={[Function]}
          role="presentation"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "fixed",
              "right": 0,
              "top": 0,
              "visibility": "hidden",
              "zIndex": 1300,
            }
          }
        >
          <TrapFocus>
            <div
              data-test="sentinelStart"
              tabIndex={0}
            />
            <Transition>
              <div
                className="MuiPaper-root MuiMenu-paper MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style={
                  Object {
                    "opacity": 0,
                    "transform": "scale(0.75, 0.5625)",
                    "visibility": "hidden",
                  }
                }
                tabIndex="-1"
              >
                <ul
                  className="MuiList-root MuiMenu-list MuiList-padding"
                  onKeyDown={[Function]}
                  role="menu"
                  tabIndex={-1}
                >
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(all)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={0}
                  >
                    All
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1d/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Day
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1w/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Week
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1M/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Month
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(custom)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    Custom
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                </ul>
              </div>
            </Transition>
            <div
              data-test="sentinelEnd"
              tabIndex={0}
            />
          </TrapFocus>
        </div>
      </Portal>
    </div>
  </BaseTimeRange>
  <p>
    Both 
    <code>
      start
    </code>
     and 
    <code>
      end
    </code>
     given:
  </p>
  <BaseTimeRange
    end="2019-06-04"
    onChange={[Function]}
    start="1989-06-04"
  >
    <div
      className="makeStyles-root"
    >
      <div
        className="MuiButtonGroup-root"
        role="group"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-calendarButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root makeStyles-calendarIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
              />
            </svg>
          </span>
          <NoSsr>
            <span
              className="MuiTouchRipple-root"
            >
              <TransitionGroup
                childFactory={[Function]}
                component={null}
                exit={true}
              />
            </span>
          </NoSsr>
        </button>
        <input
          className="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-startDate"
          color="default"
          disableFocusRipple={false}
          disableRipple={false}
          disabled={false}
          fullWidth={false}
          key=".1"
          onChange={[Function]}
          size="medium"
          type="date"
          value="1989-06-04"
          variant="outlined"
        >
          <input
            className="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-startDate"
            onChange={[Function]}
            type="date"
            value="1989-06-04"
          />
        </input>
      </div>
      <span
        className="makeStyles-to"
      >
        to
      </span>
      <input
        className="makeStyles-endDate"
        onChange={[Function]}
        type="date"
        value="2019-06-04"
      />
      <Portal>
        <div
          className="MuiPopover-root"
          onKeyDown={[Function]}
          role="presentation"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "fixed",
              "right": 0,
              "top": 0,
              "visibility": "hidden",
              "zIndex": 1300,
            }
          }
        >
          <TrapFocus>
            <div
              data-test="sentinelStart"
              tabIndex={0}
            />
            <Transition>
              <div
                className="MuiPaper-root MuiMenu-paper MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style={
                  Object {
                    "opacity": 0,
                    "transform": "scale(0.75, 0.5625)",
                    "visibility": "hidden",
                  }
                }
                tabIndex="-1"
              >
                <ul
                  className="MuiList-root MuiMenu-list MuiList-padding"
                  onKeyDown={[Function]}
                  role="menu"
                  tabIndex={-1}
                >
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(all)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={0}
                  >
                    All
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1d/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Day
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1w/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Week
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1M/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Month
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(custom)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    Custom
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                </ul>
              </div>
            </Transition>
            <div
              data-test="sentinelEnd"
              tabIndex={0}
            />
          </TrapFocus>
        </div>
      </Portal>
    </div>
  </BaseTimeRange>
</div>
`;
